# BreachLab---Stuxnet-Style-anomaly-detection-demo

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
breachlab/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py
breachlab/attacks/: __init__.py  actuator.py  base.py  replay.py  variants.py
breachlab/dashboard/: __init__.py  app.py  charts.py
breachlab/detectors/: __init__.py  autoencoder.py  base.py  isolation_forest.py  statistical.py  windowing.py
breachlab/evaluation/: __init__.py  metrics.py  runner.py  tables.py
breachlab/simulator/: __init__.py  benign.py  cascade.py  centrifuge.py
breachlab/viz/: __init__.py  plots.py  style.py
docs/: physics_explainer.md
tests/: test_attacks.py  test_detectors.py  test_evaluation.py  test_simulator.py  test_viz.py
