[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breachlab"
version = "0.1.0"
description = "A Stuxnet-inspired ICS anomaly-detection demo: detecting an attack on physical signals the malware couldn't fake (simulated data only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ics", "ot-security", "anomaly-detection", "stuxnet", "cybersecurity", "machine-learning"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4"]

[project.scripts]
breachlab = "breachlab.cli:main"

[tool.setuptools.packages.find]
include = ["breachlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
